--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <body>
     <div id="root"></div>
     <!-- Ini akan diubah Vite saat build -->
-    <script type="module" src="./src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
